Fri Nov 28 14:41:52 2003  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* lib/soap/streamHandler.rb: drop unused http parameters.

	* lib/soap/encodingstyle/soapHandler.rb, lib/soap/mapping/factory.rb,
	  lib/soap/mapping/mapping.rb, lib/soap/mapping/registry.rb,
	  lib/wsdl/soap/complexType.rb: ApacheSOAP's map support was broken
	  under WSDL dynanic client environment.  fixed.

	* test/wsdl/raa/*: add tests.

	* lib/xsd/datatypes.rb: dateTime precision bug fix (at least, I hope.)
	  bug of soap4r.  XSDDateTimeImple.to_time passed a Float to
	  Time.local/Time.gm as an usec, and NUM2LONG(rb_num2long for Float)
	  causes rounding error.

	* test/soap/test_basetype.rb, test/xsd/test_xsd.rb: add tests.

Fri Nov 28 04:15:24 2003  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (method_arity): used wrong Proc object.  [ruby-talk:86504]

Fri Nov 28 00:47:29 2003  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_f_exit), process.c (rb_f_exit_bang): treat true as
	  success, false as failure.  [ruby-dev:22067]

	* eval.c (rb_f_abort, rb_thread_switch), process.c (rb_f_system): use
	  ANSI macro instead of hard coded value.

	* eval.c (rb_f_exit), process.c (rb_f_exit_bang): use VALUEs not but
	  TYPEs.

Thu Nov 27 22:05:48 2003  Akinori MUSHA  <knu@iDaemons.org>

	* eval.c, gc.c: FreeBSD/ia64 currently does not have a way for a
	  process to get the base address for the RSE backing store, so
	  hardcode it for the moment.
	  [submitted by: Marcel Moolenaar <marcel@FreeBSD.org>]

Thu Nov 27 17:36:42 2003  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tkafter.rb: bug fix on TkTimer#cancel_on_exception=(mode).
	  TkTimer#wait recieves the exception of the callback.
	  The exception is kept on @return_value.

Thu Nov 27 16:58:48 2003  WATANABE Hirofumi  <eban@ruby-lang.org>

	* win32/win32.c (rb_w32_stat): remove _fullpath() for NUL: device.

Wed Nov 26 15:38:47 2003  WATANABE Hirofumi  <eban@ruby-lang.org>
